# EHRGym

./: .env.example  .gitignore  Dockerfile  Logo.pages  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run.py  tsconfig.json
apps/ehr/: package.json
apps/ehr/app/: globals.css  layout.tsx  page.tsx
apps/ehr/app/api/dev/reset/: route.ts
apps/ehr/app/api/patients/: route.ts
apps/ehr/app/api/patients/[id]/: route.ts
apps/ehr/app/api/patients/[id]/workflow/: route.ts
apps/ehr/app/patient/[id]/: actions.ts  page.tsx
apps/ehr/components/: activity-nav.tsx  app-brand.tsx  chart-review-tabs.tsx  patient-workspace.tsx  section-card.tsx  workspace-sidebar.tsx
apps/ehr/data/: diagnosis-catalog.csv  order-catalog.csv  problem-list-catalog.csv  provider-catalog.csv
docker/: Dockerfile  entrypoint.sh
docs/: remote-vlm-demo.md
env_server/: __init__.py
env_server/app/: __init__.py  browser.py  main.py  models.py
notebooks/: ehrgym_grpo_training.ipynb
prisma/: schema.prisma  seed.ts
scripts/: diagnose_server_actions.py  example_agent.py  measure_controls.py  remote_vlm_agent.py  trajectory_lib.py  ui_smoke_test.py
shared/: diagnosis-catalog.ts  order-catalog.ts  problem-list-catalog.ts  provider-catalog.ts  reset-database.ts  seed-data.ts
synthetic/: README.md
tasks/examples/: aki-chart-review.json
