[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehrgym-env-server"
version = "0.1.0"
description = "OpenEnv-style FastAPI + Playwright environment server for EHRGym"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "playwright>=1.51.0",
  "pydantic>=2.10.6",
  "uvicorn[standard]>=0.34.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["env_server*"]
